--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1710,9 +1710,9 @@ mark,
       border-color: transparent; }
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
-    color: #fff;
-    background-color: #1a232a;
-    border-color: #1a232a #1a232a #1a232a #1a232a; }
+    color: #495057;
+    background-color: #fff;
+    border-color: #dee2e6 #dee2e6 #fff; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
@@ -5709,13 +5709,13 @@ fieldset:disabled a.btn {
     color: #6c757d;
     pointer-events: none; }
 
-.btn-lg {
+.btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
-.btn-sm {
+.btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -5731,6 +5731,93 @@ input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
   width: 100%; }
+
+.btn-group,
+.btn-group-vertical {
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle; }
+  .btn-group > .btn,
+  .btn-group-vertical > .btn {
+    position: relative;
+    flex: 1 1 auto; }
+    .btn-group > .btn:hover,
+    .btn-group-vertical > .btn:hover {
+      z-index: 1; }
+    .btn-group > .btn:focus, .btn-group > .btn:active, .btn-group > .btn.active,
+    .btn-group-vertical > .btn:focus,
+    .btn-group-vertical > .btn:active,
+    .btn-group-vertical > .btn.active {
+      z-index: 1; }
+
+.btn-toolbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; }
+  .btn-toolbar .input-group {
+    width: auto; }
+
+.btn-group > .btn:not(:first-child),
+.btn-group > .btn-group:not(:first-child) {
+  margin-left: -1px; }
+
+.btn-group > .btn:not(:last-child):not(.dropdown-toggle),
+.btn-group > .btn-group:not(:last-child) > .btn {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
+
+.btn-group > .btn:not(:first-child),
+.btn-group > .btn-group:not(:first-child) > .btn {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0; }
+
+.dropdown-toggle-split {
+  padding-right: 0.5625rem;
+  padding-left: 0.5625rem; }
+  .dropdown-toggle-split::after,
+  .dropup .dropdown-toggle-split::after,
+  .dropright .dropdown-toggle-split::after {
+    margin-left: 0; }
+  .dropleft .dropdown-toggle-split::before {
+    margin-right: 0; }
+
+.btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split {
+  padding-right: 0.375rem;
+  padding-left: 0.375rem; }
+
+.btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
+  padding-right: 0.75rem;
+  padding-left: 0.75rem; }
+
+.btn-group-vertical {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center; }
+  .btn-group-vertical > .btn,
+  .btn-group-vertical > .btn-group {
+    width: 100%; }
+  .btn-group-vertical > .btn:not(:first-child),
+  .btn-group-vertical > .btn-group:not(:first-child) {
+    margin-top: -1px; }
+  .btn-group-vertical > .btn:not(:last-child):not(.dropdown-toggle),
+  .btn-group-vertical > .btn-group:not(:last-child) > .btn {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0; }
+  .btn-group-vertical > .btn:not(:first-child),
+  .btn-group-vertical > .btn-group:not(:first-child) > .btn {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0; }
+
+.btn-group-toggle > .btn,
+.btn-group-toggle > .btn-group > .btn {
+  margin-bottom: 0; }
+  .btn-group-toggle > .btn input[type="radio"],
+  .btn-group-toggle > .btn input[type="checkbox"],
+  .btn-group-toggle > .btn-group > .btn input[type="radio"],
+  .btn-group-toggle > .btn-group > .btn input[type="checkbox"] {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+    pointer-events: none; }
 
 .dropup,
 .dropright,
@@ -6465,7 +6552,23 @@ textarea.form-control {
 .navbar-nav > li {
   padding-left: 1rem; }
 
-.navbar-white {
+.nav-tabs .nav-link,
+.nav-tabs .nav-item .nav-link {
+  border-top: 4px solid transparent; }
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  font-weight: 600;
+  color: #1a232a;
+  border-top: 4px solid #1a232a; }
+
+.nav-tabs {
+  border-bottom: 1px solid #dfdfdf !important; }
+
+.card.special {
+  border-top: 0; }
+
+.b-top {
   border-top: 8px solid #1a232a; }
 
 .font-weight-extrabold {
@@ -6476,30 +6579,27 @@ label {
   margin-bottom: 0.2rem; }
 
 table.dataTable thead .sorting_asc {
-  background: url("../images/up.svg") no-repeat center left !important;
-  border-bottom: 0 !important; }
+  background: none !important;
+  border-bottom: 0 !important;
+  border-top: 0 !important; }
 
 table.dataTable thead .sorting_desc {
-  background: url("../images/down.svg") no-repeat center left !important;
-  border-bottom: 0 !important; }
+  background: none !important;
+  border-bottom: 0 !important;
+  border-top: 0 !important; }
 
 table.dataTable thead .sorting {
-  background: url("../images/both.svg") no-repeat center left !important;
-  border-bottom: 0 !important; }
+  background: none !important;
+  border-bottom: 0 !important;
+  border-top: 0 !important; }
 
-table.dataTable thead td,
-table.dataTable tbody td,
-table.dataTable tfoot td,
 table.dataTable.no-footer {
-  border: none !important; }
+  border-bottom: 1px solid #ccc !important; }
 
 table.dataTable thead tr th,
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 16px 18px !important; }
-
-table.dataTable thead tr th {
-  padding: 16px 20px !important; }
 
 .col-centered {
   float: none;
@@ -6507,3 +6607,15 @@ table.dataTable thead tr th {
 
 .clickable-row {
   cursor: pointer; }
+
+span.arrow-hack {
+  margin-left: 5px; }
+
+span.asc {
+  background: url("../images/up.svg") no-repeat center right !important; }
+
+span.desc {
+  background: url("../images/down.svg") no-repeat center right !important; }
+
+span.sort {
+  background: url("../images/both.svg") no-repeat center right !important; }
