--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -14,10 +14,9 @@ $breadcrumb-padding-x: 0.4rem;
 $navbar-padding-x: 0rem;
 
 $nav-tabs-border-color: #ccc;
-$nav-tabs-link-active-bg: #1a232a;
-$nav-tabs-link-active-color: #fff;
-$nav-tabs-link-active-border-color: #1a232a #1a232a $nav-tabs-link-active-bg
-  #1a232a;
+// $nav-tabs-link-active-color: #fff;
+// $nav-tabs-link-active-border-color: #1a232a #1a232a $nav-tabs-link-active-bg
+//   #1a232a;
 
 $table-border-color: #ced4da;
 $table-accent-bg: #f8f9fa;
@@ -55,6 +54,7 @@ $spacers: (
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/buttons";
+@import "../../node_modules/bootstrap/scss/button-group";
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/modal";
 @import "../../node_modules/bootstrap/scss/forms";
@@ -63,7 +63,27 @@ $spacers: (
   padding-left: 1rem;
 }
 
-.navbar-white {
+.nav-tabs .nav-link,
+.nav-tabs .nav-item .nav-link {
+  border-top: 4px solid transparent;
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  font-weight: 600;
+  color: #1a232a;
+  border-top: 4px solid #1a232a;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #dfdfdf !important;
+}
+
+.card.special {
+  border-top: 0;
+}
+
+.b-top {
   border-top: 8px solid #1a232a;
 }
 
@@ -77,35 +97,37 @@ label {
 }
 
 table.dataTable thead .sorting_asc {
-  background: url("../images/up.svg") no-repeat center left !important;
+  background: none !important;
   border-bottom: 0 !important;
+  border-top: 0 !important;
 }
 
 table.dataTable thead .sorting_desc {
-  background: url("../images/down.svg") no-repeat center left !important;
+  background: none !important;
   border-bottom: 0 !important;
+  border-top: 0 !important;
 }
 
 table.dataTable thead .sorting {
-  background: url("../images/both.svg") no-repeat center left !important;
+  background: none !important;
   border-bottom: 0 !important;
+  border-top: 0 !important;
 }
 
-table.dataTable thead td,
-table.dataTable tbody td,
-table.dataTable tfoot td,
+// table.dataTable thead td,
+// table.dataTable tbody td,
+// table.dataTable tfoot td,
+// table.dataTable.no-footer {
+// }
+
 table.dataTable.no-footer {
-  border: none !important;
+  border-bottom: 1px solid #ccc !important;
 }
 
 table.dataTable thead tr th,
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 16px 18px !important;
-}
-
-table.dataTable thead tr th {
-  padding: 16px 20px !important;
 }
 
 .col-centered {
@@ -115,4 +137,17 @@ table.dataTable thead tr th {
 
 .clickable-row {
   cursor: pointer;
+}
+
+span.arrow-hack {
+  margin-left: 5px;
+}
+span.asc {
+  background: url("../images/up.svg") no-repeat center right !important;
+}
+span.desc {
+  background: url("../images/down.svg") no-repeat center right !important;
+}
+span.sort {
+  background: url("../images/both.svg") no-repeat center right !important;
 }
