--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -20,6 +20,7 @@ $table-border-color: #ced4da;
 $table-accent-bg: #f8f9fa;
 
 $input-placeholder-color: #848484;
+$font-size-base: 0.9rem;
 
 $spacer: 1rem !default;
 // prettier-ignore
