Added editing functionality

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6972,6 +6972,9 @@ table.dataTable thead tr th {
   z-index: 9999;
   background: #f7f7f7; }
 
+.write {
+  display: none; }
+
 .dataTables_paginate .paginate_button {
   padding: 6px 9px !important;
   background: none !important;
