--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -169,6 +169,10 @@ table.dataTable thead tr th {
   background: #f7f7f7;
 }
 
+.write {
+  display: none;
+}
+
 .dataTables_paginate .paginate_button {
   padding: 6px 9px !important;
   background: none !important;
