--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -160,6 +160,13 @@ table.dataTable thead tr th {
   font-weight: 600;
 }
 
+table.dataTable tbody tr .icon {
+  visibility: hidden;
+}
+table.dataTable tbody tr:hover .icon {
+  visibility: visible;
+}
+
 .sticky {
   position: fixed;
   top: 0;
