--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -117,6 +117,11 @@ $spacers: (
   font-weight: 400;
 }
 
+.font-weight-semibold {
+  font-weight: 600;
+  letter-spacing: -0.3px;
+}
+
 .font-weight-extrabold {
   font-weight: 900;
   letter-spacing: -0.5px;
