--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,98 @@
 @charset "UTF-8";
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem; }
+
+.alert-heading {
+  color: inherit; }
+
+.alert-link {
+  font-weight: 700; }
+
+.alert-dismissible {
+  padding-right: 4rem; }
+  .alert-dismissible .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.75rem 1.25rem;
+    color: inherit; }
+
+.alert-primary {
+  color: #0e1216;
+  background-color: #d1d3d4;
+  border-color: #bfc1c3; }
+  .alert-primary hr {
+    border-top-color: #b2b4b7; }
+  .alert-primary .alert-link {
+    color: black; }
+
+.alert-secondary {
+  color: #363636;
+  background-color: #e1e1e1;
+  border-color: #d5d5d5; }
+  .alert-secondary hr {
+    border-top-color: #c8c8c8; }
+  .alert-secondary .alert-link {
+    color: #1d1d1d; }
+
+.alert-success {
+  color: #194b47;
+  background-color: #d6e9e7;
+  border-color: #c5e0de; }
+  .alert-success hr {
+    border-top-color: #b4d7d5; }
+  .alert-success .alert-link {
+    color: #0c2523; }
+
+.alert-info {
+  color: #0c5460;
+  background-color: #d1ecf1;
+  border-color: #bee5eb; }
+  .alert-info hr {
+    border-top-color: #abdde5; }
+  .alert-info .alert-link {
+    color: #062c33; }
+
+.alert-warning {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba; }
+  .alert-warning hr {
+    border-top-color: #ffe8a1; }
+  .alert-warning .alert-link {
+    color: #533f03; }
+
+.alert-danger {
+  color: #682323;
+  background-color: #f4d9d9;
+  border-color: #f0caca; }
+  .alert-danger hr {
+    border-top-color: #eab6b6; }
+  .alert-danger .alert-link {
+    color: #421616; }
+
+.alert-light {
+  color: #818182;
+  background-color: #fefefe;
+  border-color: #fdfdfe; }
+  .alert-light hr {
+    border-top-color: #ececf6; }
+  .alert-light .alert-link {
+    color: #686868; }
+
+.alert-dark {
+  color: #1b1e21;
+  background-color: #d6d8d9;
+  border-color: #c6c8ca; }
+  .alert-dark hr {
+    border-top-color: #b9bbbe; }
+  .alert-dark .alert-link {
+    color: #040505; }
+
 *,
 *::before,
 *::after {
