--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -41,6 +41,7 @@ $spacers: (
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/variables";
 
+@import "../../node_modules/bootstrap/scss/alert";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/breadcrumb";
