--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -100,10 +100,6 @@ $spacers: (
   border-top-right-radius: 0;
 }
 
-.b-top {
-  border-top: 4px solid #1a232a;
-}
-
 .btn-outline-primary svg {
   fill: #1a232a;
 }
@@ -203,7 +199,8 @@ table.dataTable tbody tr:hover .icon {
   margin: 0 auto;
 }
 
-.clickable-row {
+.clickable-row,
+.clickable-checkbox {
   cursor: pointer;
 }
 
