--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -180,6 +180,10 @@ table.dataTable tbody tr:hover .icon {
   display: none;
 }
 
+.opentask {
+  display: none;
+}
+
 .dataTables_paginate .paginate_button {
   padding: 6px 9px !important;
   background: none !important;
