--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7063,10 +7063,9 @@ table.dataTable tbody tr:hover .icon {
   visibility: visible; }
 
 .sticky {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
-  width: 100%;
   display: block;
   z-index: 888;
   background: #f7f7f7;
@@ -7077,6 +7076,9 @@ table.dataTable tbody tr:hover .icon {
 
 .opentask {
   display: none; }
+
+.time {
+  font-size: 14px; }
 
 .dataTables_paginate .paginate_button {
   padding: 6px 9px !important;
