--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -249,3 +249,10 @@ span.sort {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
+
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+    max-width: 1200px;
+  }
+}
