--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -165,6 +165,11 @@ table.dataTable tbody tr:hover .icon {
   visibility: visible;
 }
 
+table thead tr th {
+  border-bottom: 1px solid #ced4da !important;
+  border-top: 1px solid #ced4da !important;
+}
+
 .sticky {
   position: sticky;
   top: 0;
@@ -245,7 +250,7 @@ span.sort {
   font-size: 16px;
   font-weight: 400;
   color: #495057;
-  background-color: #fff;
+  background-color: #f8f9fa;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
@@ -255,4 +260,8 @@ span.sort {
     width: 90%;
     max-width: 1200px;
   }
+}
+
+.papir {
+  display: none;
 }
