Added henvisnings tab and adjusted some styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7056,10 +7056,10 @@ table.dataTable tbody td {
 table.dataTable thead tr th {
   font-weight: 600; }
 
-table.dataTable tbody tr .icon {
+table.sorting tbody tr .icon {
   visibility: hidden; }
 
-table.dataTable tbody tr:hover .icon {
+table.sorting tbody tr:hover .icon {
   visibility: visible; }
 
 table thead tr th {
@@ -7083,6 +7083,9 @@ table thead tr th {
 
 .time {
   font-size: 14px; }
+
+.hidden .arrow-hack {
+  display: none; }
 
 .dataTables_paginate .paginate_button {
   padding: 6px 9px !important;
