--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -100,11 +100,13 @@ $spacers: (
   border-top-right-radius: 0;
 }
 
-.btn-outline-primary svg {
+.btn-outline-primary svg,
+.btn-primary svg {
   fill: #1a232a;
 }
 
-.btn-outline-primary:hover svg {
+.btn-outline-primary:hover svg,
+.btn-primary:hover svg {
   fill: #fff;
 }
 
@@ -178,6 +180,10 @@ table thead tr th {
   z-index: 888;
   background: #f7f7f7;
   transition: 0.4s all;
+}
+
+.sticky-dialog {
+  top: 120px;
 }
 
 .write {
@@ -264,6 +270,11 @@ span.sort {
     width: 90%;
     max-width: 1200px;
   }
+}
+
+.modal-body {
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
 }
 
 .papir {
