Several changes and magasinenhed update

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7068,6 +7068,10 @@ table thead tr th {
   border-bottom: 1px solid #ced4da !important;
   border-top: 1px solid #ced4da !important; }
 
+.table th,
+.table td {
+  vertical-align: middle; }
+
 .sticky {
   position: sticky;
   top: 0;
