--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7072,6 +7072,13 @@ table thead tr th {
 .table td {
   vertical-align: middle; }
 
+.table tr td a {
+  font-weight: 600;
+  text-decoration: underline; }
+
+.table tr td a:hover {
+  text-decoration: none; }
+
 .sticky {
   position: sticky;
   top: 0;
@@ -7115,6 +7122,11 @@ table thead tr th {
 .clickable-row,
 .clickable-checkbox {
   cursor: pointer; }
+
+table.dataTable tbody tr.selected,
+table.dataTable tbody tr.selected a {
+  background: #1a232a !important;
+  color: #fff; }
 
 span.arrow-hack {
   margin-left: 5px; }
