--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -177,6 +177,15 @@ table thead tr th {
   vertical-align: middle;
 }
 
+.table tr td a {
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+.table tr td a:hover {
+  text-decoration: none;
+}
+
 .sticky {
   position: sticky;
   top: 0;
@@ -229,6 +238,12 @@ table thead tr th {
 .clickable-row,
 .clickable-checkbox {
   cursor: pointer;
+}
+
+table.dataTable tbody tr.selected,
+table.dataTable tbody tr.selected a {
+  background: #1a232a !important;
+  color: #fff;
 }
 
 span.arrow-hack {
