--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7125,7 +7125,7 @@ table thead tr th {
 
 table.dataTable tbody tr.selected,
 table.dataTable tbody tr.selected a {
-  background: #686868 !important;
+  background: #1a232a !important;
   color: #fff; }
 
 table.dataTable tbody tr.selected .btn-outline-primary {
