--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -242,7 +242,7 @@ table thead tr th {
 
 table.dataTable tbody tr.selected,
 table.dataTable tbody tr.selected a {
-  background: #686868 !important;
+  background: #1a232a !important;
   color: #fff;
 }
 
