--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -152,6 +152,7 @@ table.dataTable tbody th,
 table.dataTable tbody td {
   padding-left: 18px !important;
   padding-right: 18px !important;
+  word-wrap: break-word;
 }
 
 table.dataTable thead tr th {
