--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -155,6 +155,19 @@ table.dataTable tbody td {
   word-wrap: break-word;
 }
 
+.handle {
+  cursor: move;
+}
+
+.dt-rowReorder-moving {
+  background: #686868 !important;
+  color: #fff !important;
+}
+
+.dt-rowReorder-moving svg {
+  fill: #fff !important;
+}
+
 table.dataTable thead tr th {
   font-weight: 600;
 }
