--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -156,12 +156,12 @@ table.dataTable tbody td {
   word-wrap: break-word;
 }
 
-.handle {
-  cursor: move;
+.sorting_disabled {
+  border: 0 !important;
 }
 
-.form-check-input {
-  transform: scale(1.4, 1.4);
+.handle {
+  cursor: move;
 }
 
 .dt-rowReorder-moving {
@@ -337,4 +337,14 @@ table.dataTable thead .sorting span {
 
 .carousel .carousel-item {
   transition-duration: 0.4s;
+}
+
+.badge-purple {
+  background: #9f0b4a;
+  color: #fff;
+}
+
+.badge-green {
+  background: #3b8c0b;
+  color: #fff;
 }
