Added accordion page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7364,3 +7364,6 @@ table.dataTable thead .sorting span {
 
 .close-icon {
   display: none; }
+
+.accordion button.collapsed .icon {
+  transform: rotate(-90deg); }
