--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7365,5 +7365,8 @@ table.dataTable thead .sorting span {
 .close-icon {
   display: none; }
 
+.accordion button .icon {
+  transform: rotate(0deg); }
+
 .accordion button.collapsed .icon {
   transform: rotate(-90deg); }
