--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7370,3 +7370,6 @@ table.dataTable thead .sorting span {
 
 .accordion button.collapsed .icon {
   transform: rotate(-90deg); }
+
+.list-group-item {
+  line-height: 0.5em; }
