conversion of pages to narrow design

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -366,5 +366,5 @@ table.dataTable thead .sorting span {
 }
 
 .list-group-item {
-    line-height: .5em /* set to text height */
+    padding: 4px 12px;
 }
