--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7372,4 +7372,4 @@ table.dataTable thead .sorting span {
   transform: rotate(-90deg); }
 
 .list-group-item {
-  line-height: 0.5em; }
+  padding: 4px 12px; }
